--- a/api/schema/src/main/adoc/modules/schema/pages/mml.adoc
+++ b/api/schema/src/main/adoc/modules/schema/pages/mml.adoc
@@ -21,9 +21,9 @@ The `metamodelDto` root element is defined as:
 
 [source,xml]
 ----
-<xs:schema targetNamespace="http://causeway.apache.org/schema/metamodel"        <!--.-->
+<xs:schema targetNamespace="https://causeway.apache.org/schema/metamodel"        <!--.-->
            elementFormDefault="qualified"
-           xmlns="http://causeway.apache.org/schema/metamodel"
+           xmlns="https://causeway.apache.org/schema/metamodel"
            xmlns:xs="http://www.w3.org/2001/XMLSchema">
 
     <xs:element name="metamodelDto">                                        <!--.-->
@@ -37,7 +37,7 @@ The `metamodelDto` root element is defined as:
     ...
 </xs:schema>
 ----
-<.> the metamodel schema has a namespace URI of "http://causeway.apache.org/schema/mml".
+<.> the metamodel schema has a namespace URI of "https://causeway.apache.org/schema/mml".
 Although URIs are not the same as URLs, you will find that the schemas are also downloadable from this location.
 <.> definition of the `metamodelDto` root element.
 The corresponding XML will use this as its top-level element.
@@ -51,7 +51,7 @@ The `domainClassDto` element describes the behaviour and structure of a single d
 
 [source,xml]
 ----
-<xs:schema targetNamespace="http://causeway.apache.org/schema/mml" ... >
+<xs:schema targetNamespace="https://causeway.apache.org/schema/mml" ... >
     ...
     <xs:element name="domainClassDto">                                          <!--.-->
         <xs:complexType>
@@ -122,7 +122,7 @@ The `member` (abstract) complex type is the supertype for properties, collection
 
 [source,xml]
 ----
-<xs:schema targetNamespace="http://causeway.apache.org/schema/mml" ... >
+<xs:schema targetNamespace="https://causeway.apache.org/schema/mml" ... >
     ...
     <xs:complexType name="member">
         <xs:complexContent>
@@ -149,7 +149,7 @@ The `property` complex type represent a scalar association returning a single va
 
 [source,xml]
 ----
-<xs:schema targetNamespace="http://causeway.apache.org/schema/mml" ... >
+<xs:schema targetNamespace="https://causeway.apache.org/schema/mml" ... >
     ...
     <xs:complexType name="property">
         <xs:complexContent>
@@ -176,7 +176,7 @@ Like `property` (above), the `collection` complex types represent an association
 
 [source,xml]
 ----
-<xs:schema targetNamespace="http://causeway.apache.org/schema/mml" ... >
+<xs:schema targetNamespace="https://causeway.apache.org/schema/mml" ... >
     ...
     <xs:complexType name="collection">
         <xs:complexContent>
@@ -203,7 +203,7 @@ The `action` complex type represents a behaviour of the domain object.
 
 [source,xml]
 ----
-<xs:schema targetNamespace="http://causeway.apache.org/schema/mml" ... >
+<xs:schema targetNamespace="https://causeway.apache.org/schema/mml" ... >
     ...
     <xs:complexType name="action">
         <xs:complexContent>
@@ -241,7 +241,7 @@ The concrete implementations are either `scalarParam` or `vectorParam`.
 
 [source,xml]
 ----
-<xs:schema targetNamespace="http://causeway.apache.org/schema/mml" ... >
+<xs:schema targetNamespace="https://causeway.apache.org/schema/mml" ... >
     ...
     <xs:complexType name="param">                                   <!--.-->
         <xs:complexContent>
@@ -294,7 +294,7 @@ The meaning of the attributes depends on the facet implementation.
 
 [source,xml]
 ----
-<xs:schema targetNamespace="http://causeway.apache.org/schema/mml" ... >
+<xs:schema targetNamespace="https://causeway.apache.org/schema/mml" ... >
     ...
     <xs:complexType name="facetHolder">                         <!--.-->
         <xs:sequence>
