--- a/viewers/wicket/adoc/modules/ROOT/pages/setup-and-configuration.adoc
+++ b/viewers/wicket/adoc/modules/ROOT/pages/setup-and-configuration.adoc
@@ -141,7 +141,7 @@ causeway:
   viewer:
     wicket:
       credit:
-        - url:  http://causeway.apache.org
+        - url:  https://causeway.apache.org
           image: images/apache-causeway/logo-48x48.png
           name: Apache Causeway
 ----
