--- a/README.adoc
+++ b/README.adoc
@@ -8,7 +8,7 @@ image:https://github.com/apache/isis/workflows/Build%20and%20Test%20(w/%20Maven)
 image:https://sonarcloud.io/api/project_badges/measure?project=apache_isis&metric=alert_status[link="https://sonarcloud.io/dashboard?id=apache_isis"]
 image:https://github.com/apache-causeway-committers/causeway-nightly/actions/workflows/apache-causeway-ci-nightly.yml/badge.svg[link="https://github.com/apache-causeway-committers/causeway-nightly/actions/workflows/apache-causeway-ci-nightly.yml"]
 
-_http://causeway.apache.org[Apache Causeway] software is a framework for rapidly developing domain-driven apps in Java. Write your business logic in entities, domain services and repositories, and the framework dynamically generates a representation of that domain model as a webapp or a RESTful API._
+_https://causeway.apache.org[Apache Causeway] software is a framework for rapidly developing domain-driven apps in Java. Write your business logic in entities, domain services and repositories, and the framework dynamically generates a representation of that domain model as a webapp or a RESTful API._
 
 Start learning about Apache Causeway using the https://github.com/apache/causeway-app-helloworld["Hello World"] starter app.
 Explore features with our daily built demo docker image https://github.com/apache/causeway/blob/master/examples/demo/domain/src/main/adoc/modules/demo/pages/about.adoc["DemoApp"].
@@ -298,10 +298,10 @@ Indeed, the example todoapp demonstrates this.
 
 == Learning More
 
-The Apache Causeway http://causeway.apache.org[website] has lots of useful information and is being continually updated.
+The Apache Causeway https://causeway.apache.org[website] has lots of useful information and is being continually updated.
 
 Or, you can just start coding using the https://github.com/apache/causeway-app-simpleapp[SimpleApp] starter app.
 
-And if you need help or support, join our https://cwiki.apache.org/confluence/display/CAUSEWAY/Signing+up+to+Slack[ASF Slack channel] or our http://causeway.apache.org/support.html[mailing list].
+And if you need help or support, join our https://cwiki.apache.org/confluence/display/CAUSEWAY/Signing+up+to+Slack[ASF Slack channel] or our https://causeway.apache.org/support.html[mailing list].
 
 
