--- a/antora/components/refguide-index/modules/commons/pages/index/functional/Railway.adoc
+++ b/antora/components/refguide-index/modules/commons/pages/index/functional/Railway.adoc
@@ -20,12 +20,12 @@ interface Railway<F, S> {
   S getSuccessElseFail(Function<F, ? extends Throwable> toThrowable)
   Optional<F> getFailure()     // <.>
   F getFailureElseFail()
-  Railway<F, S> ifSuccess(Consumer<S> successConsumer)     // <.>
-  Railway<F, S> ifFailure(Consumer<F> failureConsumer)     // <.>
-  Railway<F, R> mapSuccess(Function<S, R> successMapper)     // <.>
-  Railway<R, S> mapFailure(Function<F, R> failureMapper)     // <.>
-  R fold(Function<F, R> failureMapper, Function<S, R> successMapper)     // <.>
-  Railway<F, S> chain(Function<S, Railway<F, S>> chainingFunction)     // <.>
+  Railway<F, S> ifSuccess(ThrowingConsumer<S> successConsumer)     // <.>
+  Railway<F, S> ifFailure(ThrowingConsumer<F> failureConsumer)     // <.>
+  Railway<F, R> mapSuccess(ThrowingFunction<S, R> successMapper)     // <.>
+  Railway<R, S> mapFailure(ThrowingFunction<F, R> failureMapper)     // <.>
+  R fold(ThrowingFunction<F, R> failureMapper, ThrowingFunction<S, R> successMapper)     // <.>
+  Railway<F, S> chain(ThrowingFunction<S, Railway<F, S>> chainingFunction)     // <.>
 }
 ----
 
@@ -39,32 +39,32 @@ Optionally returns the contained _value_ based on presence, that is, if this is 
 --
 Optionally returns the contained _failure_ based on presence, that is, if this is a _Failure_ .
 --
-<.> xref:#ifSuccess_Consumer[ifSuccess(Consumer)]
+<.> xref:#ifSuccess_ThrowingConsumer[ifSuccess(ThrowingConsumer)]
 +
 --
-Peeks into the contained _success_ if this is a _Success_ .
+If this is a _Success_ , peeks into the contained _success_ .
 --
-<.> xref:#ifFailure_Consumer[ifFailure(Consumer)]
+<.> xref:#ifFailure_ThrowingConsumer[ifFailure(ThrowingConsumer)]
 +
 --
-Peeks into the contained _failure_ if this is a _Failure_ .
+If this is a _Failure_ , peeks into the contained _failure_ .
 --
-<.> xref:#mapSuccess_Function[mapSuccess(Function)]
+<.> xref:#mapSuccess_ThrowingFunction[mapSuccess(ThrowingFunction)]
 +
 --
-Maps this xref:refguide:commons:index/functional/Railway.adoc[Railway] to another if this is a _Success_ . Otherwise if this is a _Failure_ acts as identity operator.
+If this is a _Success_ , maps this xref:refguide:commons:index/functional/Railway.adoc[Railway] to another (success). Otherwise if this is a _Failure_ acts as identity operator.
 --
-<.> xref:#mapFailure_Function[mapFailure(Function)]
+<.> xref:#mapFailure_ThrowingFunction[mapFailure(ThrowingFunction)]
 +
 --
 Maps this xref:refguide:commons:index/functional/Railway.adoc[Railway] to another if this is a _Failure_ . Otherwise if this is a _Success_ acts as identity operator.
 --
-<.> xref:#fold_Function_Function[fold(Function, Function)]
+<.> xref:#fold_ThrowingFunction_ThrowingFunction[fold(ThrowingFunction, ThrowingFunction)]
 +
 --
-Maps the contained _success_ or _failure_ to a new value of type _R_ using according mapping function _successMapper_ or _failureMapper_ .
+Maps the contained _failure_ or _success_ to a new value of type _R_ using according mapping function _failureMapper_ or _successMapper_ .
 --
-<.> xref:#chain_Function[chain(Function)]
+<.> xref:#chain_ThrowingFunction[chain(ThrowingFunction)]
 +
 --
  *Railway Pattern* If this is a _Success_ , returns a new xref:refguide:commons:index/functional/Railway.adoc[Railway] as produced by the chainingFunction, that receives the current success value as input. Otherwise if this is a _Failure_ acts as identity operator and the chainingFunction is not executed.
@@ -82,33 +82,33 @@ Optionally returns the contained _value_ based on presence, that is, if this is 
 
 Optionally returns the contained _failure_ based on presence, that is, if this is a _Failure_ .
 
-[#ifSuccess_Consumer]
-=== ifSuccess(Consumer)
+[#ifSuccess_ThrowingConsumer]
+=== ifSuccess(ThrowingConsumer)
 
-Peeks into the contained _success_ if this is a _Success_ .
+If this is a _Success_ , peeks into the contained _success_ .
 
-[#ifFailure_Consumer]
-=== ifFailure(Consumer)
+[#ifFailure_ThrowingConsumer]
+=== ifFailure(ThrowingConsumer)
 
-Peeks into the contained _failure_ if this is a _Failure_ .
+If this is a _Failure_ , peeks into the contained _failure_ .
 
-[#mapSuccess_Function]
-=== mapSuccess(Function)
+[#mapSuccess_ThrowingFunction]
+=== mapSuccess(ThrowingFunction)
 
-Maps this xref:refguide:commons:index/functional/Railway.adoc[Railway] to another if this is a _Success_ . Otherwise if this is a _Failure_ acts as identity operator.
+If this is a _Success_ , maps this xref:refguide:commons:index/functional/Railway.adoc[Railway] to another (success). Otherwise if this is a _Failure_ acts as identity operator.
 
-[#mapFailure_Function]
-=== mapFailure(Function)
+[#mapFailure_ThrowingFunction]
+=== mapFailure(ThrowingFunction)
 
 Maps this xref:refguide:commons:index/functional/Railway.adoc[Railway] to another if this is a _Failure_ . Otherwise if this is a _Success_ acts as identity operator.
 
-[#fold_Function_Function]
-=== fold(Function, Function)
+[#fold_ThrowingFunction_ThrowingFunction]
+=== fold(ThrowingFunction, ThrowingFunction)
 
-Maps the contained _success_ or _failure_ to a new value of type _R_ using according mapping function _successMapper_ or _failureMapper_ .
+Maps the contained _failure_ or _success_ to a new value of type _R_ using according mapping function _failureMapper_ or _successMapper_ .
 
-[#chain_Function]
-=== chain(Function)
+[#chain_ThrowingFunction]
+=== chain(ThrowingFunction)
 
  *Railway Pattern* If this is a _Success_ , returns a new xref:refguide:commons:index/functional/Railway.adoc[Railway] as produced by the chainingFunction, that receives the current success value as input. Otherwise if this is a _Failure_ acts as identity operator and the chainingFunction is not executed.
 
