--- a/antora/components/refguide-index/modules/commons/pages/index/io/DataPeer.adoc
+++ b/antora/components/refguide-index/modules/commons/pages/index/io/DataPeer.adoc
@@ -1,20 +1,16 @@
-= ScalarValueDtoV2
+= DataPeer
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-Represents a nullable scalar value, as used by ContentNegotiationServiceOrgApacheCausewayV2 and its clients.
+General purpose byte data peer that acts as source and sink at the same time.
 
 == API
 
 [source,java]
-.ScalarValueDtoV2.java
+.DataPeer.java
 ----
-class ScalarValueDtoV2 {
-  ScalarValueDtoV2 forNull(Class<?> type)
-  ScalarValueDtoV2 forValue(Object value)
-  ScalarValueDtoV2 forValue(T value, ValueSemanticsProvider<T> valueSemantics)
-  boolean isNull()
-  boolean isValueDecomposition()
-  T getValueAs(Class<T> entityType)
+interface DataPeer {
+  DataPeer inMemory()
+  DataPeer inMemory(int initialBufferSize)
 }
 ----
 
