--- a/antora/components/refguide-index/modules/commons/pages/index/io/DataSource.adoc
+++ b/antora/components/refguide-index/modules/commons/pages/index/io/DataSource.adoc
@@ -9,26 +9,209 @@ General purpose readable byte data source.
 .DataSource.java
 ----
 interface DataSource {
-  Try<T> readAll(Function<InputStream, Try<T>> consumingMapper)
-  DataSource none()     // <.>
-  DataSource ofInputStreamSupplier(Supplier<InputStream> inputStreamSupplier)
-  DataSource ofResource(Class<?> cls, String resourcePath)
-  DataSource ofFile(File file)
-  DataSource ofString(String string, Charset charset)
-  DataSource ofStringUtf8(String string)
-  DataSource ofBytes(byte[] bytes)
+  Try<T> tryReadAll(Function<InputStream, Try<T>> consumingMapper)
+  Try<T> tryReadAndApply(ThrowingFunction<InputStream, T> inputStreamMapper)     // <.>
+  Try<Void> tryReadAndAccept(ThrowingConsumer<InputStream> inputStreamConsumer)     // <.>
+  Try<byte[]> tryReadAsBytes()     // <.>
+  byte[] bytes()     // <.>
+  Try<String> tryReadAsString(Charset charset)     // <.>
+  Try<String> tryReadAsStringUtf8()     // <.>
+  Try<Can<String>> tryReadAsLines(Charset charset)     // <.>
+  Try<Can<String>> tryReadAsLinesUtf8()     // <.>
+  Try<BufferedImage> tryReadAsImage()
+  Try<Void> tryReadAndWrite(DataSink dataSink, int bufferSize)     // <.>
+  void pipe(DataSink dataSink, int bufferSize)     // <.>
+  DataSource empty()     // <.>
+  DataSource ofInputStreamSupplier(ThrowingSupplier<InputStream> inputStreamSupplier)     // <.>
+  DataSource ofResource(Class<?> cls, String resourcePath)     // <.>
+  DataSource ofFile(File file)     // <.>
+  DataSource ofString(String string, Charset charset)     // <.>
+  DataSource ofStringUtf8(String string)     // <.>
+  DataSource ofBytes(byte[] bytes)     // <.>
 }
 ----
 
-<.> xref:#none_[none()]
+<.> xref:#tryReadAndApply_ThrowingFunction[tryReadAndApply(ThrowingFunction)]
++
+--
+Passes an _InputStream_ to given _Function_ for application.
+--
+<.> xref:#tryReadAndAccept_ThrowingConsumer[tryReadAndAccept(ThrowingConsumer)]
++
+--
+Passes an _InputStream_ to given _Consumer_ for consumption.
+--
+<.> xref:#tryReadAsBytes_[tryReadAsBytes()]
++
+--
+Reads from this DataSource into a String using given charset encoding.
+--
+<.> xref:#bytes_[bytes()]
++
+--
+Shortcut for _tryReadAsBytes().valueAsNonNullElseFail()_ .
+--
+<.> xref:#tryReadAsString_Charset[tryReadAsString(Charset)]
++
+--
+Reads from this DataSource into a String using given charset encoding.
+--
+<.> xref:#tryReadAsStringUtf8_[tryReadAsStringUtf8()]
++
+--
+Reads from this DataSource into a String using UTF-8 encoding.
+--
+<.> xref:#tryReadAsLines_Charset[tryReadAsLines(Charset)]
++
+--
+Reads from this DataSource all lines using given charset encoding.
+--
+<.> xref:#tryReadAsLinesUtf8_[tryReadAsLinesUtf8()]
++
+--
+Reads from this DataSource all lines using UTF-8 encoding.
+--
+<.> xref:#tryReadAndWrite_DataSink_int[tryReadAndWrite(DataSink, int)]
++
+--
+Acts as a pipe, reading from this xref:refguide:commons:index/io/DataSource.adoc[DataSource] and writing to given xref:refguide:commons:index/io/DataSink.adoc[DataSink] , using given bufferSize for the underlying byte data junks.
+--
+<.> xref:#pipe_DataSink_int[pipe(DataSink, int)]
++
+--
+Acts as a pipe, reading from this xref:refguide:commons:index/io/DataSource.adoc[DataSource] and writing to given xref:refguide:commons:index/io/DataSink.adoc[DataSink] , using given bufferSize for the underlying byte data junks.
+--
+<.> xref:#empty_[empty()]
 +
 --
 Acts as a no-op.
 --
+<.> xref:#ofInputStreamSupplier_ThrowingSupplier[ofInputStreamSupplier(ThrowingSupplier)]
++
+--
+Creates a xref:refguide:commons:index/io/DataSource.adoc[DataSource] for given InputStream Supplier.
+--
+<.> xref:#ofResource_Class_String[ofResource(Class, String)]
++
+--
+Creates a xref:refguide:commons:index/io/DataSource.adoc[DataSource] for given resource path relative to _Class_ .
+--
+<.> xref:#ofFile_File[ofFile(File)]
++
+--
+Creates a xref:refguide:commons:index/io/DataSource.adoc[DataSource] for given _File_ . If `null` , an 'empty' DataSource is returned.
+--
+<.> xref:#ofString_String_Charset[ofString(String, Charset)]
++
+--
+Creates a xref:refguide:commons:index/io/DataSource.adoc[DataSource] for given _String_ . If `null` or empty, an 'empty' DataSource is returned.
+--
+<.> xref:#ofStringUtf8_String[ofStringUtf8(String)]
++
+--
+Creates a xref:refguide:commons:index/io/DataSource.adoc[DataSource] for given _String_ . If `null` or empty, an 'empty' DataSource is returned.
+--
+<.> xref:#ofBytes_byte[ofBytes(byte)]
++
+--
+Creates a xref:refguide:commons:index/io/DataSource.adoc[DataSource] for given byte array. If `null` or empty, an 'empty' DataSource is returned.
+--
 
 == Members
 
-[#none_]
-=== none()
+[#tryReadAndApply_ThrowingFunction]
+=== tryReadAndApply(ThrowingFunction)
+
+Passes an _InputStream_ to given _Function_ for application.
+
+[#tryReadAndAccept_ThrowingConsumer]
+=== tryReadAndAccept(ThrowingConsumer)
+
+Passes an _InputStream_ to given _Consumer_ for consumption.
+
+[#tryReadAsBytes_]
+=== tryReadAsBytes()
+
+Reads from this DataSource into a String using given charset encoding.
+
+If the underlying _InputStream_ is null a success xref:refguide:commons:index/functional/Try.adoc[Try] is returned, containing a null value.
+
+[#bytes_]
+=== bytes()
+
+Shortcut for _tryReadAsBytes().valueAsNonNullElseFail()_ .
+
+[#tryReadAsString_Charset]
+=== tryReadAsString(Charset)
+
+Reads from this DataSource into a String using given charset encoding.
+
+If the underlying _InputStream_ is null a success xref:refguide:commons:index/functional/Try.adoc[Try] is returned, containing a null value.
+
+[#tryReadAsStringUtf8_]
+=== tryReadAsStringUtf8()
+
+Reads from this DataSource into a String using UTF-8 encoding.
+
+If the underlying _InputStream_ is null a success xref:refguide:commons:index/functional/Try.adoc[Try] is returned, containing a null value.
+
+[#tryReadAsLines_Charset]
+=== tryReadAsLines(Charset)
+
+Reads from this DataSource all lines using given charset encoding.
+
+If the underlying _InputStream_ is null a success xref:refguide:commons:index/functional/Try.adoc[Try] is returned, containing a null value.
+
+[#tryReadAsLinesUtf8_]
+=== tryReadAsLinesUtf8()
+
+Reads from this DataSource all lines using UTF-8 encoding.
+
+If the underlying _InputStream_ is null a success xref:refguide:commons:index/functional/Try.adoc[Try] is returned, containing a null value.
+
+[#tryReadAndWrite_DataSink_int]
+=== tryReadAndWrite(DataSink, int)
+
+Acts as a pipe, reading from this xref:refguide:commons:index/io/DataSource.adoc[DataSource] and writing to given xref:refguide:commons:index/io/DataSink.adoc[DataSink] , using given bufferSize for the underlying byte data junks.
+
+[#pipe_DataSink_int]
+=== pipe(DataSink, int)
+
+Acts as a pipe, reading from this xref:refguide:commons:index/io/DataSource.adoc[DataSource] and writing to given xref:refguide:commons:index/io/DataSink.adoc[DataSink] , using given bufferSize for the underlying byte data junks.
+
+Throws if the write failed.
+
+[#empty_]
+=== empty()
 
 Acts as a no-op.
+
+[#ofInputStreamSupplier_ThrowingSupplier]
+=== ofInputStreamSupplier(ThrowingSupplier)
+
+Creates a xref:refguide:commons:index/io/DataSource.adoc[DataSource] for given InputStream Supplier.
+
+[#ofResource_Class_String]
+=== ofResource(Class, String)
+
+Creates a xref:refguide:commons:index/io/DataSource.adoc[DataSource] for given resource path relative to _Class_ .
+
+[#ofFile_File]
+=== ofFile(File)
+
+Creates a xref:refguide:commons:index/io/DataSource.adoc[DataSource] for given _File_ . If `null` , an 'empty' DataSource is returned.
+
+[#ofString_String_Charset]
+=== ofString(String, Charset)
+
+Creates a xref:refguide:commons:index/io/DataSource.adoc[DataSource] for given _String_ . If `null` or empty, an 'empty' DataSource is returned.
+
+[#ofStringUtf8_String]
+=== ofStringUtf8(String)
+
+Creates a xref:refguide:commons:index/io/DataSource.adoc[DataSource] for given _String_ . If `null` or empty, an 'empty' DataSource is returned.
+
+[#ofBytes_byte]
+=== ofBytes(byte)
+
+Creates a xref:refguide:commons:index/io/DataSource.adoc[DataSource] for given byte array. If `null` or empty, an 'empty' DataSource is returned.
