--- a/antora/components/relnotes/modules/ROOT/pages/2023/2.0.0-RC1/mignotes.adoc
+++ b/antora/components/relnotes/modules/ROOT/pages/2023/2.0.0-RC1/mignotes.adoc
@@ -22,9 +22,72 @@ The namespace and location of XSDs has changed:
 
 Note the change from `http` to `https`.
 
+To update your app:
+
+* the `menubars.layout.xml` should now declare the following namespaces and locations:
++
+[source,xml]
+.menubars.layout.xml
+----
+<mb3:menuBars
+        xsi:schemaLocation="https://causeway.apache.org/applib/layout/menubars/bootstrap3 https://causeway.apache.org/applib/layout/menubars/bootstrap3/menubars.xsd https://causeway.apache.org/applib/layout/component https://causeway.apache.org/applib/layout/component/component.xsd"
+        xmlns:mb3="https://causeway.apache.org/applib/layout/menubars/bootstrap3"
+        xmlns:cpt="https://causeway.apache.org/applib/layout/component"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    ...
+</mb3:menuBars>
+----
+
+* while any `Xxx.layout.xml` files (for `Xxx` domain object) should declare:
++
+[source,xml]
+.Xxx.layout.xml
+----
+<bs3:grid
+        xsi:schemaLocation="https://causeway.apache.org/applib/layout/component https://causeway.apache.org/applib/layout/component/component.xsd https://causeway.apache.org/applib/layout/grid/bootstrap3 https://causeway.apache.org/applib/layout/grid/bootstrap3/bootstrap3.xsd"
+        xmlns:bs3="https://causeway.apache.org/applib/layout/grid/bootstrap3"
+        xmlns:cpt="https://causeway.apache.org/applib/layout/component"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    ...
+</bs3:grid>
+----
+
+
+If you are still using the "isis" artifacts, then the old schemas are still available, but have moved to the `layout-v1` directory.
+Adjust the locations in your `.layout.xml` files accordingly:
+
+* the `menubars.layout.xml` should now declare the following locations (namespace unchanged):
++
+[source,xml]
+.menubars.layout.xml
+----
+<mb3:menuBars
+        xsi:schemaLocation="http://isis.apache.org/applib/layout/menubars/bootstrap3 https://causeway.apache.org/applib/layout-v1/menubars/bootstrap3/menubars.xsd http://isis.apache.org/applib/layout/component https://causeway.apache.org/applib/layout-v1/component/component.xsd"
+        xmlns:mb3="http://isis.apache.org/applib/layout/menubars/bootstrap3"
+        xmlns:cpt="http://isis.apache.org/applib/layout/component"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    ...
+</mb3:menuBars>
+----
+
+* while any `Xxx.layout.xml` files (for `Xxx` domain object) should declare:
++
+[source,xml]
+.Xxx.layout.xml
+----
+<bs3:grid
+        xsi:schemaLocation="http://isis.apache.org/applib/layout/component https://causeway.apache.org/applib/layout-v1/component/component.xsd http://isis.apache.org/applib/layout/grid/bootstrap3 https://causeway.apache.org/applib/layout-v1/grid/bootstrap3/bootstrap3.xsd"
+        xmlns:bs3="http://isis.apache.org/applib/layout/grid/bootstrap3"
+        xmlns:cpt="http://isis.apache.org/applib/layout/component"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    ...
+</bs3:grid>
+----
+
 == Configuration
 
-The following changed:
+The following configuration properties have been changed:
+
 [cols="2a,3a", options="header"]
 
 |===
