--- a/antora/components/relnotes/modules/ROOT/pages/2023/2.0.0-RC1/mignotes.adoc
+++ b/antora/components/relnotes/modules/ROOT/pages/2023/2.0.0-RC1/mignotes.adoc
@@ -33,6 +33,7 @@ To update your app:
         xsi:schemaLocation="https://causeway.apache.org/applib/layout/menubars/bootstrap3 https://causeway.apache.org/applib/layout/menubars/bootstrap3/menubars.xsd https://causeway.apache.org/applib/layout/component https://causeway.apache.org/applib/layout/component/component.xsd"
         xmlns:mb3="https://causeway.apache.org/applib/layout/menubars/bootstrap3"
         xmlns:cpt="https://causeway.apache.org/applib/layout/component"
+        xmlns:lnk="https://causeway.apache.org/applib/layout/links"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     ...
 </mb3:menuBars>
@@ -47,6 +48,7 @@ To update your app:
         xsi:schemaLocation="https://causeway.apache.org/applib/layout/component https://causeway.apache.org/applib/layout/component/component.xsd https://causeway.apache.org/applib/layout/grid/bootstrap3 https://causeway.apache.org/applib/layout/grid/bootstrap3/bootstrap3.xsd"
         xmlns:bs3="https://causeway.apache.org/applib/layout/grid/bootstrap3"
         xmlns:cpt="https://causeway.apache.org/applib/layout/component"
+        xmlns:lnk="https://causeway.apache.org/applib/layout/links"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     ...
 </bs3:grid>
@@ -62,9 +64,10 @@ Adjust the locations in your `.layout.xml` files accordingly:
 .menubars.layout.xml
 ----
 <mb3:menuBars
-        xsi:schemaLocation="http://isis.apache.org/applib/layout/menubars/bootstrap3 https://causeway.apache.org/applib/layout-v1/menubars/bootstrap3/menubars.xsd http://isis.apache.org/applib/layout/component https://causeway.apache.org/applib/layout-v1/component/component.xsd"
+        xsi:schemaLocation="http://isis.apache.org/applib/layout/menubars/bootstrap3 https://causeway.apache.org/applib/layout-v1/menubars/bootstrap3/menubars.xsd http://isis.apache.org/applib/layout/component https://causeway.apache.org/applib/layout-v1/component/component.xsd http://isis.apache.org/applib/layout/links https://causeway.apache.org/applib/layout-v1/links/links.xsd"
         xmlns:mb3="http://isis.apache.org/applib/layout/menubars/bootstrap3"
         xmlns:cpt="http://isis.apache.org/applib/layout/component"
+        xmlns:lnk="http://isis.apache.org/applib/layout/links"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     ...
 </mb3:menuBars>
@@ -76,9 +79,10 @@ Adjust the locations in your `.layout.xml` files accordingly:
 .Xxx.layout.xml
 ----
 <bs3:grid
-        xsi:schemaLocation="http://isis.apache.org/applib/layout/component https://causeway.apache.org/applib/layout-v1/component/component.xsd http://isis.apache.org/applib/layout/grid/bootstrap3 https://causeway.apache.org/applib/layout-v1/grid/bootstrap3/bootstrap3.xsd"
+        xsi:schemaLocation="http://isis.apache.org/applib/layout/component https://causeway.apache.org/applib/layout-v1/component/component.xsd http://isis.apache.org/applib/layout/grid/bootstrap3 https://causeway.apache.org/applib/layout-v1/grid/bootstrap3/bootstrap3.xsd http://isis.apache.org/applib/layout/links https://causeway.apache.org/applib/layout-v1/links/links.xsd"
         xmlns:bs3="http://isis.apache.org/applib/layout/grid/bootstrap3"
         xmlns:cpt="http://isis.apache.org/applib/layout/component"
+        xmlns:lnk="http://isis.apache.org/applib/layout/links"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     ...
 </bs3:grid>
