CAUSEWAY-3312: [Demo] Object Annotation: add missing VMs (just stubs)

--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/DomainObjectLayout/describedAs/DomainObjectLayoutDescribedAsVm-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/DomainObjectLayout/describedAs/DomainObjectLayoutDescribedAsVm-description.adoc
@@ -2,5 +2,5 @@
 
 The `describedAs` attribute ...
 
-TODO[CAUSEWAY-3309]
+WARNING: TODO[CAUSEWAY-3309]
 Description of the property, shown as a tooltip
