--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/DomainObjectLayout/paged/DomainObjectLayoutPagedVm-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/DomainObjectLayout/paged/DomainObjectLayoutPagedVm-description.adoc
@@ -2,6 +2,6 @@
 
 The `paged` attribute ...
 
-TODO[CAUSEWAY-3309]
+WARNING: TODO[CAUSEWAY-3309]
 Add link to object once visited as a bookmark
 Number of domain objects per page in collections
