--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/DomainObject/editing/DomainObjectEditingVm-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/DomainObject/editing/DomainObjectEditingVm-description.adoc
@@ -1,6 +1,15 @@
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-The `named` attribute ...
+The `editing` attribute ...
 
-WARNING: TODO[CAUSEWAY-3309]
-Custom text for the domain object's type wherever labeled
+WARNING: TODO[CAUSEWAY-3312]
+Whether the properties of this domain object can be edited, or collections of this object be added to/removed from.
+Note that non-editable objects can nevertheless have actions invoked upon them.
+
+The `editingDisabledReason` attribute ...
+
+WARNING: TODO[CAUSEWAY-3312]
+If #editing() is set to Editing#DISABLED , then the reason to provide to the user as to why the object’s properties cannot be edited/collections modified.
+
+
+
